--- a/cd.html
+++ b/cd.html
@@ -213,7 +213,7 @@
 
 
                     <div class="rte">
-                        <p><img style="width: 540px; height: 360px;" src="/media/1112/jaynelloyd_eventphotography_colchesterdigitalconference2019_0518.jpg?width=540&amp;height=360" alt="" data-udi="umb://media/368e3b41078d438c8459e88350c90e94" /></p>
+                        <p><img src="/images/380.png"/></p>
 <h2>All sponsors</h2>
 <h3>Free Tickets</h3>
 <p>Sponsors may receive <strong>Free Ticket</strong>(s) based on the level of sponsorship.</p>
@@ -304,7 +304,9 @@
 
 
 <div class="row feature feature--sponsor-list">
+    <div class="col xxxx">
     <div class="container bg-white py-4">
+
 
         
 
@@ -317,14 +319,15 @@
 
                         <div class="row d-flex flex-wrap justify-content-around">
                                 <a href="/sponsors/european-regional-development-fund/" class="card card--speaker mb-4 shadow">
-                                        <img src="/media/1051/logo-erdf.png?anchor=center&amp;mode=crop&amp;width=255&amp;height=255&amp;rnd=131991409490000000" alt="..." class="" />
+                                    <img src="/images/380.png"/>
                                 </a>
                                 <a href="/sponsors/south-east-creative-cultural-and-digital-support/" class="card card--speaker mb-4 shadow">
-                                        <img src="/media/1076/logo-seccads.png?anchor=center&amp;mode=crop&amp;width=255&amp;height=255&amp;rnd=131991409000000000" alt="..." class="" />
+                                    <img src="/images/380.png"/>
                                 </a>
                         </div>
 
     </div>
+</div>
     </div>
 
 
@@ -344,16 +347,16 @@
 
                         <div class="row d-flex flex-wrap justify-content-around">
                                 <a href="/sponsors/wholething/" class="card card--speaker mb-4 shadow">
-                                        <img src="/media/1053/logo-wholething-stacked-white.png?anchor=center&amp;mode=crop&amp;width=255&amp;height=255&amp;rnd=131991410290000000" alt="..." class="" />
+                                    <img src="/images/380.png"/>
                                 </a>
                                 <a href="/sponsors/chick/" class="card card--speaker mb-4 shadow">
-                                        <img src="/media/1054/logo-chick.png?anchor=center&amp;mode=crop&amp;width=255&amp;height=255&amp;rnd=131991410410000000" alt="..." class="" />
+                                    <img src="/images/380.png"/>
                                 </a>
                                 <a href="/sponsors/eira/" class="card card--speaker mb-4 shadow">
-                                        <img src="/media/1091/logo-eirasvg.png?anchor=center&amp;mode=crop&amp;width=255&amp;height=255&amp;rnd=132011128810000000" alt="..." class="" />
+                                    <img src="/images/380.png"/>
                                 </a>
                                 <a href="/sponsors/nexmo/" class="card card--speaker mb-4 shadow">
-                                        <img src="/media/1096/logo-nexmo.png?anchor=center&amp;mode=crop&amp;width=255&amp;height=255&amp;rnd=132017146720000000" alt="..." class="" />
+                                    <img src="/images/380.png"/>
                                 </a>
                         </div>
 
@@ -377,7 +380,7 @@
 
                         <div class="row d-flex flex-wrap justify-content-around">
                                 <a href="/sponsors/mosaic/" class="card card--speaker mb-4 shadow">
-                                        <img src="/media/1094/logo-mozaic.png?anchor=center&amp;mode=crop&amp;width=255&amp;height=255&amp;rnd=132012559990000000" alt="..." class="" />
+                                    <img src="/images/380.png"/>
                                 </a>
                         </div>
 
@@ -401,7 +404,7 @@
 
                         <div class="row d-flex flex-wrap justify-content-around">
                                 <a href="/sponsors/hyve/" class="card card--speaker mb-4 shadow">
-                                        <img src="/media/1075/logo-hyve.png?anchor=center&amp;mode=crop&amp;width=255&amp;height=255&amp;rnd=132005672190000000" alt="..." class="" />
+                                    <img src="/images/380.png"/>
                                 </a>
                         </div>
 
