--- a/cd.html
+++ b/cd.html
@@ -287,7 +287,7 @@
                     </div>
 
 
-                <!-- Stacked content stuff main -->
+                <!-- Stacked content stuff main  * -->
 
 
             </div>
